# tile_compile

./: .env  .gitignore  CLEANUP_SUMMARY_V4.md  Dockerfile.dev  Dockerfile.prod  LICENSE  METHODIK_V4_MIGRATION_COMPLETE.md  MIGRATION_TO_TLR_V4.md  MIGRATION_V4_SUMMARY.md  README.md  README_de.md  TLR_IMPLEMENTATION_GUIDE.md  analyze_m45_dataset.py  backend_Cfa_luminace_registration.md  backend_api.md  check_dependencies.py  cleanup_phases_impl.py  cleanup_v4_migration.sh  comprehensive_validation.sh  config_hybrid_test.yaml  docker-compose.postgres.prod.yml  docker-compose.postgres.yml  docker-compose.yml  download_reference_datasets.py  generate_artifacts_report.py  generate_datasets.py  gui_control_mapping.md  plan.md  prepare_m45_dataset.py  pyproject.toml  ref_siril_registration_call.py  requirements.txt  run-cli.sh  run_validation.py  runs  siril_register_osc.ssf  siril_stack_average.ssf  siril_tile_compile.yaml  start_backend.sh  start_gui.cmd  (+16 more)
tile_compile_cpp/: CMakeLists.txt  README.md  README_CONTEXT.md  build  build_linux_appimage.sh  build_linux_appimage_docker.sh  build_linux_release.sh  build_linux_release_docker_ubuntu2004.sh  build_macos_release.sh  build_windows_release.bat  generate_report.py  pack_tile_compile_cpp_snapshot.sh  start_gui.sh  tile_compile.schema.json  tile_compile.schema.yaml  tile_compile.yaml  tile_compile_altaz.yaml  tile_compile_dwarf.yaml  tile_compile_eq.yaml  tile_compile_polar.yaml  tile_compile_seestar.yaml  tile_compile_smart.yaml
tile_compile_cpp/.tools/: appimagetool
tile_compile_cpp/20260126_175644_3d0dd48e/: config.yaml
tile_compile_cpp/apps/: cli_main.cpp  runner_main.cpp  runner_phase_local_metrics.cpp  runner_phase_local_metrics.hpp  runner_phase_metrics.cpp  runner_phase_metrics.hpp  runner_phase_registration.cpp  runner_phase_registration.hpp  runner_pipeline.cpp  runner_pipeline.hpp  runner_resume.cpp  runner_resume.hpp  runner_shared.cpp  runner_shared.hpp
tile_compile_cpp/docker/ubuntu20.04/: Dockerfile
tile_compile_cpp/examples/: README.md  a.yaml  canon_equatorial_balanced.example.yaml  canon_low_n_high_quality.example.yaml  emergency_mode.example.yaml  full_mode.example.yaml  ic434.example.yaml  ic434_background_gradient_chroma_suppression.example.yaml  ic434_background_gradient_chroma_suppression_aggressive.example.yaml  m31_background_gradient_balanced.example.yaml  mono_full_mode.example.yaml  mono_small_n_anti_grid.example.yaml  mono_small_n_ultra_conservative.example.yaml  reduced_mode.example.yaml  smart_telescope_dwarf_seestar.example.yaml  smart_telescope_very_bright_star.example.yaml  tile_compile.a.yaml  tile_compile.canon_equatorial_balanced.example.yaml  tile_compile.canon_low_n_high_quality.example.yaml  tile_compile.emergency_mode.example.yaml  tile_compile.full_mode.example.yaml  tile_compile.ic434_test.example.yaml  tile_compile.mono_full_mode.example.yaml  tile_compile.mono_small_n_anti_grid.example.yaml  tile_compile.mono_small_n_ultra_conservative.example.yaml  tile_compile.reduced_mode.example.yaml  tile_compile.smart_telescope_altaz_polar_near.example.yaml  tile_compile.smart_telescope_dwarf_seestar.example.yaml  tile_compile.smart_telescope_very_bright_star.example.yaml  tile_compile.very_bright_star_anti_seam.example.yaml  very_bright_star_anti_seam.example.yaml
tile_compile_cpp/gui/: constants.js  main.py  main.py.bak
tile_compile_cpp/gui_cpp/: AssumptionsWidget.cpp  AssumptionsWidget.hpp  AstrometryTab.hpp  BackendClient.cpp  GuiConstants.cpp  GuiConstants.hpp  HistoryTab.hpp  MainWindow.cpp  MainWindow.hpp  PhaseProgressWidget.cpp  PhaseProgressWidget.hpp  RunTab.hpp  RunnerProcess.cpp  RunnerProcess.hpp  constants.js  main.cpp
tile_compile_cpp/gui_cpp/tabs/: AstrometryTab.cpp  AstrometryTab.hpp  ConfigTab.cpp  ConfigTab.hpp  CurrentRunTab.cpp  CurrentRunTab.hpp  HistoryTab.cpp  HistoryTab.hpp  PCCTab.cpp  PCCTab.hpp  RunTab.cpp  RunTab.hpp  ScanTab.cpp  ScanTab.hpp
tile_compile_cpp/scripts/: README.md  analyze_bge_gradient.py  analyze_gradient_simple.py  compare_two_runs.py  convert_raw2fits.py  docker_compile_and_run.sh  generate_report.py  lco_bulk_download.py  optimize_bge_iterative.sh  package_sources.sh  pcc_diagnostics.py  update_bge_params.py
tile_compile_cpp/src/astrometry/: gaia_catalog.cpp  photometric_color_cal.cpp  wcs.cpp
tile_compile_cpp/src/clustering/: clustering.cpp  kmeans.cpp
tile_compile_cpp/src/core/: events.cpp  mode_gating.cpp  utils.cpp
tile_compile_cpp/src/io/: config.cpp  (+1 more)
tile_compile_cpp/tests/: test_debayer.cpp  test_fits.cpp  test_main.cpp  test_mode_gating.cpp  test_reconstruction_regression.cpp  test_registration_outlier_utils.cpp  test_stacking_quality_weighting.cpp  test_utils.cpp
tile_compile_python_legacy/: README_CONTEXT.md  check_dependencies.py  generate_artifacts_report.py  pyproject.toml  run-cli.sh  setup_venv.sh  start_gui.cmd  tile_compile.schema.json  tile_compile.schema.yaml  tile_compile.yaml  tile_compile_dwarf.yaml  tile_compile_eq.yaml  tile_compile_runner.py  tile_compile_smart.yaml
tile_compile_python_legacy/gui/: constants.js
tile_compile_python_legacy/runner/: calibration.py  image_processing.py  tile_local_registration_v4.py  tile_processor_v4.py  utils.py  v4_parallel.py
tile_compile_python_legacy/tests/: test_calibration.py
tile_compile_python_legacy/tile_compile_backend/: artifacts.py  clustering.py  logs.py  sigma_clipping.py  status.py
tile_compile_python_legacy/validation/: performance_benchmark.py  reference_datasets.py  visualization.py
web_backend_cpp/: CMakeLists.txt
web_backend_cpp/include/: app_state.hpp  backend_runtime.hpp  crow_app.hpp  job_store.hpp  subprocess_manager.hpp  ui_event_store.hpp
web_backend_cpp/runtime/: ui_events.jsonl
web_backend_cpp/src/: backend_runtime.cpp  job_store.cpp  main.cpp  subprocess_manager.cpp  ui_event_store.cpp
web_backend_cpp/tests/: backend_test_harness.cpp  backend_test_harness.hpp  test_backend_contract.cpp  test_run_start_naming.cpp  test_run_status_resume_progress.cpp  test_run_stop_status_overlay.cpp  test_runs_queue.cpp  test_tools_api_jobs.cpp
(+607 files in other folders)
