[tool.poetry]
name = "tile_compile"
version = "3.0.0"
description = "Astronomical Image Reconstruction Toolkit"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.0"
astropy = "^5.0"
opencv-python = "^4.6.0"
pyyaml = "^6.0"
scikit-learn = "^1.2.0"
jsonschema = "^4.17.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^3.0.0"

[tool.poetry.scripts]
tile-compile = "tile_compile_runner:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]